--- a/index.html
+++ b/index.html
@@ -66,6 +66,18 @@
         </section>
     </main>
 
+<!-- site footer -->
 
+<footer>
+<ul>
+    <li> <a href="#" target="_blank" > Telegram </a>  </li>
+    <li> <a href="#" target="_blank" > facebook </a>  </li>
+    <li> <a href="#" target="_blank" > Instagram</a>  </li>
+    <li> <a href="#" target="_blank" > Twitter </a>  </li>
+    <li> <a href="#" target="_blank" > TikTok </a>  </li>
+    
+</ul>
+<p>Copyright 2022 MMM</p>
+</footer>
 </body>
 </html>
