--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git fumdamentals</title>
+    <title>Penterest Clone</title>
 </head>
 <body>
     <!--   site header -->
@@ -35,7 +35,7 @@
 
     <main>
         
-        <h1>  Photo Gallery </h1>
+        <h1>  Penterest Clone </h1>
         <hr>
 
         <section>
